--- a/sirem02/nbproject/private/private.properties
+++ b/sirem02/nbproject/private/private.properties
@@ -4,4 +4,4 @@ copy.src.on.open=false
 copy.src.target=
 index.file=index.html
 run.as=LOCAL
-url=http://localhost/sirem02/
+url=http://localhost/sirem02-jcuartas/
